# adb-mcp-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  justfile  trivy.yaml
.github/: dependabot.yml
.github/workflows/: ai.yml  build.yml  ci.yml  codeql.yml
.opencode/commands/: debug-test.md  test-hooks.md  test-kyc.md  test-mobile.md  test.md
src/: cli.rs  id_gen.rs  main.rs
src/adb/: command.rs  executor.rs  mod.rs  parser.rs
src/server/: handler.rs  http_cors.rs  info.rs  mod.rs  runtime.rs
src/tools/: app.rs  context.rs  debug.rs  device.rs  file.rs  media.rs  mod.rs  network.rs  registry.rs  traits.rs  ui.rs
