[package]
name = "adb-mcp"
version = "0.1.0"
edition = "2024"
description = "ADB MCP Server with stdio and streamable HTTP support"
license = "MIT"
repository = "https://github.com/user/adb-mcp"

[dependencies]
rust-mcp-sdk = { version = "0.9", default-features = false, features = [
    "server",
    "macros",
    "stdio",
    "hyper-server",
    "streamable-http",
    "sse",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mimalloc = "0.1"
schemars = "1"
clap = { version = "4.6.1", features = ["derive", "env"] }
cuid2 = "0.1.4"
thiserror = "2.0.18"
tower-http = { version = "0.6.8", features = ["cors"] }
axum = { version = "0.8.9", features = ["tokio"] }
http = "1.4.0"
axum-server = "0.8.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
